[package]
name = "wavelers"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["nidhoggfgg <nidhoggfgg@gmail.com>"]
description = "dwt for rust"
keywords = ["dwt", "idwt", "math"]
readme = "README.md"
repository = "https://github.com/nidhoggfgg/wavelers"
exclude = ["examples"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "haar_wavelet"
harness = false
